Fixed overflow animation

--- a/WizQuizz/styles-sheets/create/create-style.css
+++ b/WizQuizz/styles-sheets/create/create-style.css
@@ -26,6 +26,7 @@
     height: 80%;
     padding-inline: 100px;
     padding-bottom: 100px;
+    overflow: hidden;
 }
 
 .quizinformation{
